--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-jwt-auth",
+  "name": "nkmserver",
   "version": "1.0.0",
-  "description": "Node.js Demo for JWT Authentication",
+  "description": "nkmserver ",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,7 @@
     "express",
     "mysql"
   ],
-  "author": "bezkoder",
+  "author": "wonsolution",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,6 +22,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.3"
-  }
+    "sequelize": "^5.21.3",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6"
+  },
+  "repository": "https://github.com/bezkoder/node-js-jwt-auth.git"
 }
